...
                                <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create New Post" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YI2-Uf-uSK">
                                        <rect key="frame" x="117" y="27" width="141" height="35"/>
                                        <constraints>
...
                                        </constraints>
                                        <segments>
                                            <segment title="Review"/>
                                            <segment title="Polls"/>
                                        </segments>
                                        <connections>
...
                                <rect key="frame" x="0.0" y="242" width="375" height="324"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Topic" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gff-ZI-iEq">
                                        <rect key="frame" x="31" y="6" width="313" height="50"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
...
                                        </constraints>
                                    </view>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jjR-yM-jRo">
                                        <rect key="frame" x="31" y="67" width="62" height="21"/>
                                        <constraints>
...
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Question" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iqJ-41-Nbl">
                                                    <rect key="frame" x="31" y="0.0" width="313" height="50"/>
                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
...
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                    <state key="normal" title="Forever">
                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                    </state>
...
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                    <state key="normal" title="Add">
                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                    </state>
...
                                                    </connections>
                                                </button>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Answer Choices" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HZn-dH-8sq">
                                                    <rect key="frame" x="31" y="168" width="222" height="50"/>
                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
...
                                    <constraint firstAttribute="width" constant="120" id="2bY-S3-Tts"/>
                                </constraints>
                                <state key="normal" title="Create">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
