...
        <scene sceneID="MWZ-4f-CTE">
            <objects>
                <navigationController storyboardIdentifier="SettingsNav" title="Settings" id="2B3-ZQ-Fds" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="Settings" id="YVR-sS-K6L"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="8Bv-wO-xjI">
...
        <scene sceneID="tMj-Hj-qWr">
            <objects>
                <viewController storyboardIdentifier="ChangePassword" title="Change Password" id="nFF-US-Vxk" customClass="ChangePassword" customModule="KnowItAll" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="MHE-un-lnV"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Password" translatesAutoresizingMaskIntoConstraints="NO" id="8Gk-eQ-mnl">
                                <rect key="frame" x="123.5" y="20" width="128" height="128"/>
                                <constraints>
...
                                        </constraints>
                                    </view>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Old Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KOy-W7-3La">
                                        <rect key="frame" x="0.0" y="0.0" width="283" height="40"/>
                                        <constraints>
...
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="New Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="J1j-Xl-rFg">
                                        <rect key="frame" x="0.0" y="50" width="283" height="40"/>
                                        <constraints>
...
                                        </constraints>
                                    </view>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NFh-lC-YaF">
                                        <rect key="frame" x="0.0" y="100" width="283" height="40"/>
                                        <constraints>
...
        <scene sceneID="EmB-Jd-gzw">
            <objects>
                <viewController storyboardIdentifier="Rate" title="Rate KnowItAll!" id="ys0-k5-rX0" customClass="rateVC" customModule="KnowItAll" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Jvw-aR-M7H"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qNK-I1-3rD">
                                <rect key="frame" x="160" y="335" width="55" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="Confirm"/>
                                <state key="normal" title="Confirm">
                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
        <scene sceneID="pxD-5O-sZQ">
            <objects>
                <viewController storyboardIdentifier="Submit" title="Submit Feedback" id="HLP-d9-dXO" customClass="FeedbackVC" customModule="KnowItAll" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="b9b-0U-opM"/>
...
