...
//

import UIKit

class SettingsVC: UITableViewController {
    
    var settingOptions = ["Change Password", "Notifications","Rate KnowItAll","Submit Feedback","Report","Sign Out"]
    var settingOptions2 = ["Change Password", "Notifications","Rate KnowItAll","Submit Feedback","Report","Log In"]
    let email = UserDefaults.standard.object(forKey: Login.emailKey) as! String
    
    override func viewDidLoad() {
        tableView.tableFooterView = UIView()
    }
...

    override func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
        switch indexPath.row {
            case 0:
                if email == "" {
                    let alert = UIAlertController(title: "Error!", message: "You must be logged in to perform this action!", preferredStyle: .alert)
                    alert.addAction(UIAlertAction(title: "Done", style: .default, handler: nil))
                    self.present(alert, animated: true, completion: nil)
                    return
                }
                performSegue(withIdentifier: "changePasswordSegue", sender: self)
                break
            case 1:
...
                controller.modalTransitionStyle = .flipHorizontal
                if email == "" {
                    self.present(controller, animated: true, completion: nil)
                    break
                }
                else {
                    let deleteAlert = UIAlertController(title: "Are you sure you want to sign out?", message: nil, preferredStyle: UIAlertControllerStyle.actionSheet)
                    
                    deleteAlert.addAction(UIAlertAction(title: "Yes", style: .default, handler: { (action: UIAlertAction!) in
                        // Sign out
                        UserDefaults.standard.set(Login.no, forKey: Login.loggedIn)
                        let storyboard = UIStoryboard(name: "Main", bundle:nil)
                        let controller = storyboard.instantiateViewController(withIdentifier: "LoginViewController")
                        controller.modalTransitionStyle = .flipHorizontal
                        self.present(controller, animated: true, completion: nil)
...
