...

class rateVC: UIViewController {
    @IBOutlet weak var confirmButton: UIButton!
    @IBOutlet weak var stars: CosmosView!
    
    @IBAction func confirm(_ sender: Any) {
        let alert = UIAlertController(title: "Rating Confirmed", message: "Rating of \(stars.rating) has been sent", preferredStyle: UIAlertControllerStyle.alert)
        alert.addAction(UIAlertAction(title: "Ok", style: UIAlertActionStyle.default, handler: { (action) in
            alert.dismiss(animated: true, completion: nil)
        }))
        
        self.present(alert, animated: true, completion: nil)
    }
    
...
